# prometheus-

./: .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  WHITEPAPER.md  claude-code-start.sh  faq.html  guardian-economics.html  index.html  llms.txt  manifest.json  roadmap.html  robots.txt  sitemap.xml  sw.js  whitepaper.html
.github/workflows/: ci.yml
docs/: MIGRATION_SECURITY_MEMO.md  developer-guide.md  faq.md  guardian-guide.md  repository-security.md  roadmap.md  user-guide.md  validator-guide.md
memory/: API.md  AUDIT.md  CHECKPOINT.md  ERRORS.md  MEMO.md  SCHEMA.md  SPRINTS.md  STATUS.md  TODO.md
modules/client/: Cargo.toml
modules/client/src/: lib.rs  main.rs
modules/client/src/ai/: detection.rs  federated.rs  mod.rs  phi3.rs
modules/client/src/blockchain/: connection.rs  krc20.rs  mod.rs
modules/client/src/network/: zk_proof.rs
modules/client/src/security/: scanner.rs
modules/client/tests/: e2e_threat_lifecycle.rs  performance.rs  security_fp_flood.rs  security_sybil.rs
modules/contracts/: CommunityDonations.ss  DevIncentivePool.ss  GovernanceAutoTuning.ss  GuardianReputation.ss  RuleStorage.ss  ValidatorStaking.ss
modules/guardian-node/: README.md  docker-compose.yml  requirements.txt
modules/guardian-node/jaeger/: __init__.py  analyzer.py  llm_server.py  yara_generator.py
modules/guardian-node/tests/: test_analyzer.py  test_llm_server.py  test_yara_generator.py
modules/validator-node/: Cargo.toml
modules/validator-node/src/: lib.rs
modules/validator-node/src/slashing/: mod.rs
modules/validator-node/src/voting/: commit.rs  mod.rs  reveal.rs
modules/web/audit/: index.html
scripts/: audit_trigger.py  autodidactic.py  check_memory_integrity.py
