[package]
name = "prometheus-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Prometheus Light Client - Kaspa-based decentralized threat intelligence"

[[bin]]
name = "prometheus-client"
path = "src/main.rs"

[dependencies]
kaspa-wrpc-client.workspace = true
kaspa-rpc-core.workspace = true
kaspa-hashes.workspace = true
kaspa-addresses.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
sha2.workspace = true
hex = "0.4"

[dev-dependencies]
tempfile = "3"
