[package]
name = "prometheus-validator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Prometheus Validator Node - KAS staking and consensus voting"

[dependencies]
kaspa-wrpc-client.workspace = true
kaspa-rpc-core.workspace = true
kaspa-consensus-core.workspace = true
kaspa-hashes.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
